err/django-sqs-qc.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_sqs'...
Listing './lib/python3.5/site-packages/django_sqs/management'...
Listing './lib/python3.5/site-packages/django_sqs/management/commands'...
Compiling './lib/python3.5/site-packages/django_sqs/management/commands/runreceiver.py'...
***   File "./lib/python3.5/site-packages/django_sqs/management/commands/runreceiver.py", line 134
    print 'Receiving%s from queue %s%s...' % (
                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/django_sqs/management/commands/sqs_clear.py'...
***   File "./lib/python3.5/site-packages/django_sqs/management/commands/sqs_clear.py", line 20
    print 'Clearing queue %s...' % queue_name,
                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/django_sqs/management/commands/sqs_status.py'...
***   File "./lib/python3.5/site-packages/django_sqs/management/commands/sqs_status.py", line 11
    print "Active SQS queues"
                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/django_sqs/management/commands/sqs_wait.py'...
***   File "./lib/python3.5/site-packages/django_sqs/management/commands/sqs_wait.py", line 48
    print "Queue %s has %d messages, keep waiting." % (
                                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/django_sqs/message.py'...
***   File "./lib/python3.5/site-packages/django_sqs/message.py", line 32
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/django_sqs/registered_queue.py'...
***   File "./lib/python3.5/site-packages/django_sqs/registered_queue.py", line 164
    print 'Closing', connection
                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/django_sqs_qc-0.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
